cv/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-me
  labels:
    app: cv-me
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 50%
  selector:
    matchLabels:
      app: cv-me
  template:
    metadata:
      labels:
        app: cv-me
    spec:
      containers:
        - name: cv-me
          image: sujiththirumalaisamy/cv:2d8d6f1b8f0d3c12f85805cfb0644ffa3fd75e96
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 7
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 7
            periodSeconds: 5
