cv/redirect.yml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-redirect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-redirect
  template:
    metadata:
      labels:
        app: nginx-redirect
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-volume
          configMap:
            name: nginx-redirect-config

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-redirect-service
spec:
  selector:
    app: nginx-redirect
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-redirect-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - isujith.dev
    secretName: cv-redirect-cert
  rules:
  - host: isujith.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-redirect-service
            port:
              number: 80
