cv/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cv-service
spec:
  selector:
    app: cv-me
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - cv.isujith.dev
      secretName: cv-cert
  rules:
    - host: cv.isujith.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv-service
                port:
                  number: 80
